--- a/EasyLearn/UI/CustomControls/Relations/CommonRelationView.xaml
+++ b/EasyLearn/UI/CustomControls/Relations/CommonRelationView.xaml
@@ -8,7 +8,7 @@
              xmlns:converters="clr-namespace:EasyLearn.Infrastructure.ValueConverters"
              xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
              mc:Ignorable="d">
-    <materialDesign:Card UniformCornerRadius="12" Margin="6" materialDesign:ShadowAssist.ShadowDepth="Depth1" Height="{Binding CardHeight}" VerticalAlignment="Top">
+    <Border BorderThickness="0.6" BorderBrush="#99bbff" Background="GhostWhite" Margin="12 12 0 0" Height="{Binding CardHeight}" VerticalAlignment="Top">
         <Grid>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition MinWidth="100" Width="Auto"/>
@@ -86,7 +86,7 @@
                   HorizontalAlignment="Center" Grid.ColumnSpan="3"
                   Visibility="{Binding IsCommentVisible, Converter={converters:ReverseCollapseConverter}}">
                 <Border Grid.Row="1" Background="#e6e6e6" CornerRadius="15" Height="30"></Border>
-                <Border Background="#667fcc"  CornerRadius="15" Height="30" Width="110" HorizontalAlignment="Left">
+                <Border Background="{DynamicResource MainColor}"  CornerRadius="15" Height="30" Width="110" HorizontalAlignment="Left">
                     <TextBlock Text="Комментарий" FontSize="13" 
                            FontFamily="Arial" FontWeight="Bold"
                            Foreground="#f2f2f2" VerticalAlignment="Center" HorizontalAlignment="Center"/>
@@ -100,7 +100,7 @@
                   HorizontalAlignment="Center" Grid.ColumnSpan="3"
                   Visibility="{Binding IsFirstExampleVisible, Converter={converters:ReverseCollapseConverter}}">
                 <Border Grid.Row="1" Background="#e6e6e6" CornerRadius="15" Height="45"></Border>
-                <Border Background="#667fcc"  CornerRadius="15" Height="45" Width="80" HorizontalAlignment="Left">
+                <Border Background="{DynamicResource MainColor}"  CornerRadius="15" Height="45" Width="80" HorizontalAlignment="Left">
                     <TextBlock Text="Пример" FontSize="13" 
                            FontFamily="Arial" FontWeight="Bold"
                            Foreground="#f2f2f2" VerticalAlignment="Center" HorizontalAlignment="Center"/>
@@ -113,14 +113,14 @@
                            FontFamily="Arial" FontWeight="DemiBold"
                            Foreground="#737373" VerticalAlignment="Center" HorizontalAlignment="Center" />
                 </StackPanel>
-                
+
             </Grid>
 
             <Grid Width="Auto" Margin="10 7 10 0" Grid.Row="5" VerticalAlignment="Center" 
                   HorizontalAlignment="Center" Grid.ColumnSpan="3"
                   Visibility="{Binding IsSecondExampleVisible, Converter={converters:ReverseCollapseConverter}}">
                 <Border Grid.Row="1" Background="#e6e6e6" CornerRadius="15" Height="45"></Border>
-                <Border Background="#667fcc"  CornerRadius="15" Height="45" Width="80" HorizontalAlignment="Left">
+                <Border Background="{DynamicResource MainColor}"  CornerRadius="15" Height="45" Width="80" HorizontalAlignment="Left">
                     <TextBlock Text="Пример" FontSize="13" 
                            FontFamily="Arial" FontWeight="Bold"
                            Foreground="#f2f2f2" VerticalAlignment="Center" HorizontalAlignment="Center"/>
@@ -163,5 +163,5 @@
             </Button>
 
         </Grid>
-    </materialDesign:Card>
+    </Border>
 </UserControl>
