--- a/EasyLearn/UI/CustomControls/Dictionaries/VerbPrepositionDictionaryView.xaml
+++ b/EasyLearn/UI/CustomControls/Dictionaries/VerbPrepositionDictionaryView.xaml
@@ -16,7 +16,7 @@
                             Margin="18 18 0 0"
                             Height="256"
                             Width="200"
-                            d:IsFlipped="True"
+                            d:IsFlipped="False"
                             IsFlipped="{Binding IsCardFlipped, Mode=TwoWay}">
 
         <materialDesign:Flipper.FrontContent>
@@ -30,7 +30,7 @@
                     </Grid.RowDefinitions>
 
                     <!--Пространство с картинкой и закрашенным фоном-->
-                    <materialDesign:ColorZone Background="{DynamicResource MainColorLight}" VerticalAlignment="Stretch">
+                    <materialDesign:ColorZone Background="#00e673" VerticalAlignment="Stretch">
 
                         <materialDesign:PackIcon Kind="AboutCircle" 
                                              Height="128" 
@@ -67,23 +67,40 @@
 
                     </Button>
 
-                    <!--Пространство под картинкой аккаунта-->
-                    <Grid Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Center">
 
-                        <Grid.RowDefinitions>
-                            <RowDefinition/>
-                            <RowDefinition/>
-                        </Grid.RowDefinitions>
+                    <!--Имя пользователя-->
+                    <Button Grid.Row="1"
+                            Padding="0"
+                            d:Content="Test"
+                            Command="{Binding OpenCurrentVerbPrepositionDictionaryCommand}">
+                        <Button.Style>
+                            <Style TargetType="Button">
+                                <Setter Property="Template">
+                                    <Setter.Value>
+                                        <ControlTemplate>
+                                            <Border Background="{TemplateBinding Background}">
+                                                <TextBlock VerticalAlignment="Center" 
+                                                           HorizontalAlignment="Center"
+                                                           Text="{Binding Name}" 
+                                                           d:Text="Test"
+                                                           FontFamily="Arial"
+                                                           FontSize="15"/>
+                                            </Border>
+                                        </ControlTemplate>
+                                    </Setter.Value>
+                                </Setter>
+                                <Style.Triggers>
+                                    <Trigger Property="IsMouseOver" Value="True">
+                                        <Setter Property="Background" Value="{DynamicResource MainColorSuperLight}"/>
+                                    </Trigger>
+                                    <Trigger Property="IsMouseOver" Value="False">
+                                        <Setter Property="Background" Value="GhostWhite"/>
 
-                        <!--Имя пользователя-->
-                        <StackPanel Orientation="Horizontal"
-                                HorizontalAlignment="Center"
-                                Grid.Row="0">
-                            <TextBlock Style="{DynamicResource MaterialDesignHeadline6TextBlock}" Text="{Binding Name}" FontSize="15"/>
-                        </StackPanel>
-
-                    </Grid>
-
+                                    </Trigger>
+                                </Style.Triggers>
+                            </Style>
+                        </Button.Style>
+                    </Button>
                 </Grid>
             </Border>
 
@@ -124,8 +141,10 @@
                             </Button>
 
                             <TextBlock Margin="8 0 0 0" 
-                                   VerticalAlignment="Center"
-                                   Text="Настройки словаря"/>
+                                       VerticalAlignment="Center"
+                                       FontFamily="Arial"
+                                       Foreground="Black"
+                                       Text="Настройки словаря"/>
 
                         </StackPanel>
                     </materialDesign:ColorZone>
@@ -134,7 +153,8 @@
                     <TextBox materialDesign:HintAssist.Hint="Название" 
                          materialDesign:HintAssist.IsFloating="True"
                          Grid.Row="1"         
-                         
+                         Background="{DynamicResource MainColorSuperLight}"
+                             BorderBrush="{DynamicResource MainColor}"
                          HorizontalAlignment="Stretch"
                          VerticalAlignment="Stretch"
                          Style="{DynamicResource MaterialDesignFilledTextBox}"
@@ -151,6 +171,8 @@
                     <TextBox TextWrapping="Wrap"
                          VerticalAlignment="Stretch"
                          HorizontalAlignment="Stretch"
+                             Background="{DynamicResource MainColorSuperLight}"
+                             BorderBrush="{DynamicResource MainColor}"
                          Style="{DynamicResource MaterialDesignFilledTextBox}"
                          materialDesign:HintAssist.Hint="Описание"
                          materialDesign:HintAssist.IsFloating="True"
@@ -166,35 +188,21 @@
                         </TextBox.Text>
                     </TextBox>
 
-                    <Grid Grid.Row="3" HorizontalAlignment="Stretch">
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition/>
-                            <ColumnDefinition/>
-                        </Grid.ColumnDefinitions>
-
-                        <!--Кнопка удаления словаря-->
-                        <Button Command="{Binding RemoveVerbPrepositionDictionaryCommand}"
-                            Foreground="{DynamicResource error}"
+                    <!--Кнопка удаления словаря-->
+                    <Button Command="{Binding RemoveVerbPrepositionDictionaryCommand}"
+                            Foreground="#ff3333"
                             Height="40"
+                                Grid.Row="3"
                             Style="{DynamicResource MaterialDesignFlatButton}"
                             HorizontalAlignment="Stretch"
                             Grid.Column="0">
-                            <StackPanel Orientation="Horizontal">
-                                <TextBlock Text="Удалить" VerticalAlignment="Center" HorizontalAlignment="Center"/>
-                                <materialDesign:PackIcon Kind="Trash" Height="18" Width="18" VerticalAlignment="Center" HorizontalAlignment="Left"/>
-                            </StackPanel>
-                        </Button>
+                        <StackPanel Orientation="Horizontal">
+                            <TextBlock Text="Удалить" VerticalAlignment="Center" HorizontalAlignment="Center"/>
+                            <materialDesign:PackIcon Kind="Trash" Height="18" Width="18" VerticalAlignment="Center" HorizontalAlignment="Left"/>
+                        </StackPanel>
+                    </Button>
 
-                        <!--Кнопка открытия словаря-->
-                        <Button HorizontalAlignment="Stretch"
-                            Command="{Binding OpenCurrentVerbPrepositionDictionaryCommand}"
-                            Height="40"
-                            Foreground="{DynamicResource green}"
-                            Style="{DynamicResource MaterialDesignFlatButton}"
-                            Grid.Column="1"
-                            Content="Открыть">
-                        </Button>
-                    </Grid>
+                   
                 </Grid>
             </Border>
 
