--- a/EasyLearn/UI/CustomControls/Relations/VerbPrepositionView.xaml
+++ b/EasyLearn/UI/CustomControls/Relations/VerbPrepositionView.xaml
@@ -7,52 +7,47 @@
              xmlns:converters="clr-namespace:EasyLearn.Infrastructure.ValueConverters"
              xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
              mc:Ignorable="d">
-    <materialDesign:Card UniformCornerRadius="12" Margin="6" materialDesign:ShadowAssist.ShadowDepth="Depth1" Height="{Binding CardHeight}" VerticalAlignment="Top">
-        <Grid>
-            <Grid.RowDefinitions>
-                <RowDefinition Height="45"/>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="Auto"/>
-            </Grid.RowDefinitions>
+        <Border BorderThickness="0.6" BorderBrush="#99bbff" Background="GhostWhite" Margin="12 12 0 0" Height="{Binding CardHeight}" VerticalAlignment="Top">
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="45"/>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="45"/>
+                </Grid.RowDefinitions>
 
-            <StackPanel Margin="16 10 20 10" Grid.Row="0" HorizontalAlignment="Center" Orientation="Horizontal">
-                <TextBlock Style="{DynamicResource MaterialDesignHeadline5TextBlock}" 
+                <StackPanel Margin="16 10 20 10" Grid.Row="0" HorizontalAlignment="Center" Orientation="Horizontal">
+                    <TextBlock Style="{DynamicResource MaterialDesignHeadline5TextBlock}" 
                            FontSize="19" 
                            Text="{Binding VerbValue}" 
                            VerticalAlignment="Center"
                            d:Text="Depends"/>
-                <TextBlock Style="{DynamicResource MaterialDesignHeadline5TextBlock}" 
+                    <TextBlock Style="{DynamicResource MaterialDesignHeadline5TextBlock}" 
                            FontSize="19" 
                            Text="{Binding PrepositionValue}"
                            Margin="6 0 0 0"
                            VerticalAlignment="Center" 
                            Foreground="ForestGreen"
                            d:Text="on"/>
-            </StackPanel>
+                </StackPanel>
 
-            <Border BorderBrush="LightGray" 
+                <Border BorderBrush="LightGray" 
                     BorderThickness="0.8"
                     Margin="5 0.3"
                     Grid.Row="1"
                     Visibility="{Binding IsCommentVisible, Converter={converters:ReverseCollapseConverter}}"/>
 
-            <StackPanel Margin="10 5" Grid.Row="2" Orientation="Horizontal" HorizontalAlignment="Center">
-                <TextBlock Style="{DynamicResource MaterialDesignHeadline5TextBlock}" 
-                           FontSize="14" 
-                           Text="{Binding TranslationValue}" 
-                           VerticalAlignment="Center"
-                           FontStyle="Italic"
-                           d:Text="Зависеть"
-                           Margin="0 0 4 4"/>
-                <TextBlock Style="{DynamicResource MaterialDesignHeadline5TextBlock}" 
-                           FontSize="14" 
-                           Foreground="Gray"
-                           Text="{Binding CommentValue}" 
-                           VerticalAlignment="Center"
-                           FontStyle="Italic"
-                           d:Text="от кого-то/чего-то"
-                           Margin="0 0 0 4"/>
-            </StackPanel>
+            <Grid Width="Auto" Grid.Row="2" Margin="10 0 10 0" VerticalAlignment="Center" 
+                  HorizontalAlignment="Center" Grid.ColumnSpan="3">
+                <Border Grid.Row="1" Background="#e6e6e6" CornerRadius="15" Height="30"></Border>
+                <Border Background="{DynamicResource MainColor}"  CornerRadius="15" Height="30" Width="85" HorizontalAlignment="Left">
+                    <TextBlock Text="Перевод" FontSize="13" 
+                           FontFamily="Arial" FontWeight="Bold"
+                           Foreground="#f2f2f2" VerticalAlignment="Center" HorizontalAlignment="Center"/>
+                </Border>
+                <TextBlock Text="{Binding TranslationValue}" FontSize="13" 
+                           FontFamily="Arial" FontWeight="DemiBold"
+                           Foreground="#737373" VerticalAlignment="Center" HorizontalAlignment="Left" Margin="95 0 16 0"/>
+            </Grid>
 
             <Button Style="{DynamicResource MaterialDesignFlatButton}"
                     HorizontalAlignment="Right"
@@ -65,21 +60,22 @@
                     Margin="0 4 4 0"
                     ToolTip="Настройки аккаунта">
 
-                <materialDesign:PackIcon Kind="Close" 
+                    <materialDesign:PackIcon Kind="Close" 
                                          Width="15" 
                                          Height="15"
                                          HorizontalAlignment="Center"
                                          VerticalAlignment="Center"/>
 
-                <i:Interaction.Triggers>
-                    <i:EventTrigger EventName="Click">
-                        <i:InvokeCommandAction Command="{Binding DeleteRelationCommand}"/>
-                        <i:InvokeCommandAction Command="{x:Static materialDesign:Flipper.FlipCommand}"/>
-                    </i:EventTrigger>
-                </i:Interaction.Triggers>
+                    <i:Interaction.Triggers>
+                        <i:EventTrigger EventName="Click">
+                            <i:InvokeCommandAction Command="{Binding DeleteRelationCommand}"/>
+                            <i:InvokeCommandAction Command="{x:Static materialDesign:Flipper.FlipCommand}"/>
+                        </i:EventTrigger>
+                    </i:Interaction.Triggers>
 
-            </Button>
+                </Button>
 
-        </Grid>
-    </materialDesign:Card>
+            </Grid>
+        </Border>
+        
 </UserControl>
