--- a/EasyLearn/UI/Resourses/Styles.xaml
+++ b/EasyLearn/UI/Resourses/Styles.xaml
@@ -1,31 +1,144 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-    <Style x:Key="EasyCancelButton" TargetType="Button" BasedOn="{StaticResource MaterialDesignRaisedButton}">
-        <Setter Property="Button.Background" Value="{DynamicResource error}"/>
-        <Setter Property="Button.BorderBrush" Value="{DynamicResource cancelButtonBorder}"/>
+
+    <Style x:Key="EasyButton" TargetType="Button">
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="Button">
+                    <Border BorderThickness="{TemplateBinding BorderThickness}" 
+                            BorderBrush="{TemplateBinding BorderBrush}" 
+                            Height="{TemplateBinding Height}"
+                            Background="{TemplateBinding Background}"
+                            Width="{TemplateBinding Width}"
+                            CornerRadius="4">
+                        <ContentPresenter Content="{TemplateBinding Content}"
+                                          VerticalAlignment="Center"
+                                          HorizontalAlignment="Center">
+                        </ContentPresenter>
+                    </Border>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+        <Setter Property="Button.Background" Value="{DynamicResource EastGrayLight}"/>
+        <Setter Property="Button.BorderBrush" Value="{DynamicResource EasyGray}"/>
+        <Setter Property="Height" Value="32"/>
+        <Setter Property="Button.BorderThickness" Value="0.75"/>
         <Setter Property="VerticalAlignment" Value="Stretch"/>
         <Setter Property="HorizontalAlignment" Value="Stretch"/>
-        <Setter Property="Margin" Value="0 0 7 0"/>
-    </Style>
-    <Style x:Key="EasyConfirmButton" TargetType="Button" BasedOn="{StaticResource MaterialDesignRaisedButton}">
-        <Setter Property="Button.Background" Value="#FF0E7F04"/>
-        <Setter Property="Button.BorderBrush" Value="#FF0C6704"/>
-        <Setter Property="VerticalAlignment" Value="Stretch"/>
-        <Setter Property="HorizontalAlignment" Value="Stretch"/>
-        <Setter Property="Margin" Value="7 0 0 0"/>
-    </Style>
-    <Style x:Key="EasyTextBox" TargetType="TextBox" BasedOn="{StaticResource MaterialDesignOutlinedTextBox}">
         <Style.Triggers>
-            <Trigger Property="Validation.HasError" Value="True">
-                <Setter Property="Margin" Value="0 0 0 26" />
+            <Trigger Property="IsMouseOver" Value="True">
+                <Setter Property="Button.Foreground" Value="White"/>
             </Trigger>
-            <Trigger Property="Validation.HasError" Value="False">
-                <Setter Property="Margin" Value="0 0 0 14" />
+            <Trigger Property="IsPressed" Value="True">
+                <Setter Property="Button.Foreground" Value="White"/>
+            </Trigger>
+            <Trigger Property="IsEnabled" Value="False">
+                <Setter Property="Background" Value="#d9d9d9"/>
             </Trigger>
         </Style.Triggers>
+    </Style>
+    
+    
+    <Style x:Key="EasyCancelButton" TargetType="Button" BasedOn="{StaticResource EasyButton}">
+        <Setter Property="Button.Foreground" Value="{DynamicResource EasyRed}"/>
+        <Setter Property="Margin" Value="0 0 7 0"/>
+        <Setter Property="Content">
+            <Setter.Value>
+                <TextBlock Text="Отмена" FontSize="14" FontFamily="Arial"/>
+            </Setter.Value>
+        </Setter>
+        <Style.Triggers>
+            <Trigger Property="IsMouseOver" Value="True">
+                <Setter Property="Button.Background" Value="{DynamicResource EastRedDark}"/>
+            </Trigger>
+            <Trigger Property="IsPressed" Value="True">
+                <Setter Property="Button.Background" Value="{DynamicResource EasyRedLight}"/>
+            </Trigger>
+            <Trigger Property="IsEnabled" Value="False">
+                <Setter Property="Foreground" Value="#616b61"/>
+            </Trigger>
+        </Style.Triggers>
+    </Style>
+    
+    <Style x:Key="EasyConfirmButton" TargetType="Button" BasedOn="{StaticResource EasyButton}">
+        <Setter Property="Button.Foreground" Value="{DynamicResource EasyGreen}"/>
+        <Setter Property="Margin" Value="7 0 0 0"/>
+        <Setter Property="Content">
+            <Setter.Value>
+                <TextBlock Text="Добавить" FontSize="14" FontFamily="Arial"/>
+            </Setter.Value>
+        </Setter>
+        <Style.Triggers>
+            <Trigger Property="IsMouseOver" Value="True">
+                <Setter Property="Button.Background" Value="{DynamicResource EastGreenDark}"/>
+            </Trigger>
+            <Trigger Property="IsPressed" Value="True">
+                <Setter Property="Button.Background" Value="{DynamicResource EasyGreenLight}"/>
+            </Trigger>
+            <Trigger Property="IsEnabled" Value="False">
+                <Setter Property="Foreground" Value="#616b61"/>
+            </Trigger>
+        </Style.Triggers>
+    </Style>
+
+
+    <Style x:Key="EasyTextBoxBase" TargetType="TextBox"  BasedOn="{StaticResource MaterialDesignOutlinedTextBox}">
+        <Setter Property="BorderThickness" Value="0.6"/>
+        <Setter Property="Background" Value="{DynamicResource EastGrayLight}"/>
         <Setter Property="MaxHeight" Value="40"/>
         <Setter Property="VerticalAlignment" Value="Top"/>
+        <Setter Property="Margin" Value="0 0 0 14" />
+        <Style.Triggers>
+            <Trigger Property="Validation.HasError" Value="False">
+                <Setter Property="BorderBrush" Value="{DynamicResource EasyGray}"/>
+            </Trigger>
+            <Trigger Property="IsFocused" Value="True">
+                <Setter Property="BorderBrush" Value="{DynamicResource MainColor}"/>
+            </Trigger>
+        </Style.Triggers>
     </Style>
+
+
+    <Style x:Key="EasyTextBox" TargetType="TextBox" BasedOn="{StaticResource EasyTextBoxBase}">
+        <Style.Triggers>
+            <Trigger Property="IsFocused" Value="True">
+                <Setter Property="BorderBrush" Value="{DynamicResource MainColor}"/>
+            </Trigger>
+            <Trigger Property="IsMouseOver" Value="True">
+                <Setter Property="BorderBrush" Value="{DynamicResource MainColor}"/>
+            </Trigger>
+        </Style.Triggers>
+    </Style>
+
+    <Style x:Key="EasyValidationTextBox" TargetType="TextBox" BasedOn="{StaticResource EasyTextBoxBase}">
+        <Style.Triggers>
+            <Trigger Property="Validation.HasError" Value="True">
+                <Setter Property="BorderBrush" Value="{DynamicResource EasyRed}"/>
+                <Setter Property="Background" Value="{DynamicResource EasyRedSuperLight}"/>
+            </Trigger>
+            <Trigger Property="Validation.HasError" Value="False">
+                <Setter Property="BorderBrush" Value="{DynamicResource EasyGreen}"/>
+                <Setter Property="Background" Value="{DynamicResource EasyGreenSuperLight}"/>
+            </Trigger>
+            <!--<Trigger Property="IsFocused" Value="False">
+                <Setter Property="BorderThickness" Value="0.6"/>
+            </Trigger>-->
+        </Style.Triggers>
+    </Style>
+
+    <Style x:Key="EasyComboBox" TargetType="ComboBox" BasedOn="{StaticResource MaterialDesignOutlinedComboBox}">
+        <Setter Property="Background" Value="{DynamicResource EastGrayLight}"/>
+        <Setter Property="BorderBrush" Value="{DynamicResource EasyGray}"/>
+        <Style.Triggers>
+            <Trigger Property="IsFocused" Value="True">
+                <Setter Property="BorderBrush" Value="{DynamicResource MainColor}"/>
+            </Trigger>
+            <Trigger Property="IsMouseOver" Value="True">
+                <Setter Property="BorderBrush" Value="{DynamicResource MainColor}"/>
+            </Trigger>
+        </Style.Triggers>
+    </Style>
+
     <Style x:Key="EasyTextArea" TargetType="TextBox" BasedOn="{StaticResource MaterialDesignOutlinedTextBox}">
         <Setter Property="TextWrapping" Value="Wrap"/>
         <Setter Property="VerticalAlignment" Value="Stretch"/>
